--- a/templates/full/emscripten/template.html
+++ b/templates/full/emscripten/template.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style>
+        html,body{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
